--- a/frontend/src/app/login/login.module.css
+++ b/frontend/src/app/login/login.module.css
@@ -1,6 +1,15 @@
 
 
 
+
+
+
+
+
+
+
+
+
 .authContainer {
   position: fixed; /* Para que esté sobre todo */
   width: 100vw;
@@ -15,7 +24,29 @@
   box-shadow: 0 4px 16px rgba(0,0,0,0.1);
 }
 
-.authContainer h1 { text-align: center; margin-bottom: 1rem; }
+.authContainer h1 {
+  text-align: center;
+  color: var(--azul);
+  text-transform: uppercase;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.formContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form{
+  margin-bottom: 2rem;
+}
+
+.authContainer h2 {
+  text-align: center;
+  margin-bottom: 1rem;
+  color: var(--rosado);
+}
 .authcontainer form input {
   width: 100%;
   padding: 0.75rem;
@@ -26,10 +57,10 @@
 .authContainer form button {
   width: 100%;
   padding: 0.75rem;
-  background: #4f46e5;
-  color: white;
+  background: var(--azul);
+  color: var(--blanco);
   border: none;
-  border-radius: 4px;
+  border-radius: 50px;
 }
 .authContainer .msg { color: #e53e3e; margin-top: 0.5rem; text-align:center; }
 .authContainer p { margin-top: 1rem; text-align: center; }
@@ -39,3 +70,31 @@
   color: #4f46e5;
   cursor: pointer;
 }
+
+.inputContainer {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  padding: 0.5rem;
+  margin-bottom: 0.75rem;
+  background: white;
+}
+
+.inputContainer input {
+  flex: 1;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+}
+
+.myInput{
+  width: 100%;
+  padding: 0.75rem;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+}
+
+
+
