--- a/frontend/src/components/ActivityCard.module.css
+++ b/frontend/src/components/ActivityCard.module.css
@@ -19,7 +19,7 @@
   font-size: 1.2rem;
   color: var(--gris);
   margin-bottom: 16px;
-  margin-left: 10%;
+  margin-left: 15px;
 }
 
 .location {
@@ -30,6 +30,7 @@
   gap: 6px;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  margin-left: 15px;
   font-size: 1.2rem;
 }
 
